crates/vize_croquis_cf/src/snapshots/vize_croquis_cf__suppression__tests__empty_reason.snap
---
source: crates/vize_croquis_cf/src/suppression.rs
expression: map.errors
---
[
    SuppressionError {
        message: "@vize forget reason cannot be empty. Explain why this suppression is needed.",
        line: 1,
        offset: 1,
    },
]
