crates/vize_croquis_cf/src/snapshots/vize_croquis_cf__suppression__tests__missing_reason.snap
---
source: crates/vize_croquis_cf/src/suppression.rs
expression: map.errors
---
[
    SuppressionError {
        message: "@vize forget requires a reason. Use: // @vize forget: <reason>",
        line: 1,
        offset: 1,
    },
]
