crates/vize_croquis_cf/src/snapshots/vize_croquis_cf__suppression__tests__orphan_suppression.snap
---
source: crates/vize_croquis_cf/src/suppression.rs
expression: map.errors
---
[
    SuppressionError {
        message: "@vize forget at end of file - no code to suppress",
        line: 2,
        offset: 13,
    },
]
